--- a/libs/express-sharp/adapters/fs-adapter/package.json
+++ b/libs/express-sharp/adapters/fs-adapter/package.json
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pmb0/express-sharp.git"
+    "url": "git@github.com:bussedev/monorepo.git"
   },
   "keywords": [
     "express",
@@ -38,7 +38,7 @@
   "author": "Philipp Busse",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pmb0/express-sharp/issues"
+    "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/pmb0/express-sharp#readme"
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/express-sharp/adapters/fs-adapter"
 }
