--- a/libs/express-sharp/config/package.json
+++ b/libs/express-sharp/config/package.json
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pmb0/express-sharp.git"
+    "url": "git@github.com:bussedev/monorepo.git"
   },
   "keywords": [
     "express",
@@ -40,7 +40,7 @@
   "author": "Philipp Busse",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pmb0/express-sharp/issues"
+    "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/pmb0/express-sharp#readme"
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/express-sharp/config"
 }
