docs: re-add README.md

--- a/libs/express-sharp/express-sharp/package.json
+++ b/libs/express-sharp/express-sharp/package.json
@@ -65,5 +65,5 @@
   "bugs": {
     "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/express-sharp/express-sharp"
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/express-sharp/express-sharp#readme"
 }
