--- a/libs/express-sharp/adapters/s3-adapter/package.json
+++ b/libs/express-sharp/adapters/s3-adapter/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@edged/s3-adapter",
+  "name": "@express-sharp/s3-adapter",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@edged/core": "workspace:*",
+    "@express-sharp/core": "workspace:*",
     "aws-sdk": "^2.987.0",
     "tslib": "^2.4.0"
   },
