--- a/libs/express-sharp/express-sharp/package.json
+++ b/libs/express-sharp/express-sharp/package.json
@@ -5,11 +5,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@edged/client": "workspace:*",
-    "@edged/common": "workspace:*",
-    "@edged/config": "workspace:*",
-    "@edged/core": "workspace:*",
-    "@edged/fs-adapter": "workspace:*",
+    "@express-sharp/client": "workspace:*",
+    "@express-sharp/common": "workspace:*",
+    "@express-sharp/config": "workspace:*",
+    "@express-sharp/core": "workspace:*",
+    "@express-sharp/fs-adapter": "workspace:*",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@busse/jest-config": "workspace:*",
     "@busse/tsconfig": "workspace:*",
-    "@edged/http-adapter": "workspace:*",
+    "@express-sharp/http-adapter": "workspace:*",
     "@keyv/redis": "^2.1.2",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
