--- a/libs/express-sharp/express-sharp/package.json
+++ b/libs/express-sharp/express-sharp/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "express-sharp",
+  "name": "@edged/express-sharp",
   "version": "4.2.41",
   "description": "Real-time image processing for your express application",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@express-sharp/client": "workspace:*",
-    "@express-sharp/common": "workspace:*",
-    "@express-sharp/config": "workspace:*",
-    "@express-sharp/core": "workspace:*",
-    "@express-sharp/fs-adapter": "workspace:*",
+    "@edged/client": "workspace:*",
+    "@edged/common": "workspace:*",
+    "@edged/config": "workspace:*",
+    "@edged/core": "workspace:*",
+    "@edged/fs-adapter": "workspace:*",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@busse/jest-config": "workspace:*",
     "@busse/tsconfig": "workspace:*",
-    "@express-sharp/http-adapter": "workspace:*",
+    "@edged/http-adapter": "workspace:*",
     "@keyv/redis": "^2.1.2",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
