--- a/libs/express-sharp/client/package.json
+++ b/libs/express-sharp/client/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@express-sharp/client",
+  "name": "@edged/client",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@express-sharp/common": "workspace:*",
-    "@express-sharp/config": "workspace:*",
+    "@edged/common": "workspace:*",
+    "@edged/config": "workspace:*",
     "tslib": "^2.4.0",
     "tsyringe": "^4.6.0"
   },
