--- a/libs/edged/client/package.json
+++ b/libs/edged/client/package.json
@@ -41,5 +41,8 @@
   "bugs": {
     "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/client"
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/client",
+  "files": [
+    "dist"
+  ]
 }
