--- a/libs/edged/core/package.json
+++ b/libs/edged/core/package.json
@@ -40,5 +40,8 @@
   "bugs": {
     "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/core"
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/core",
+  "files": [
+    "dist"
+  ]
 }
