--- a/libs/edged/config/package.json
+++ b/libs/edged/config/package.json
@@ -42,5 +42,8 @@
   "bugs": {
     "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/config"
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/config",
+  "files": [
+    "dist"
+  ]
 }
