--- a/libs/edged/config/package.json
+++ b/libs/edged/config/package.json
@@ -28,7 +28,6 @@
     "pnpm": ">=6.19.0"
   },
   "repository": {
-    "type": "git",
     "url": "git@github.com:bussedev/monorepo.git"
   },
   "keywords": [
@@ -42,7 +41,7 @@
   "bugs": {
     "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/config",
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/config#readme",
   "files": [
     "dist"
   ]
