--- a/services/pluggit/pluggit-web/package.json
+++ b/services/pluggit/pluggit-web/package.json
@@ -59,5 +59,12 @@
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.7",
     "@nestjs/terminus": "^8.1.0"
+  },
+  "bugs": {
+    "url": "https://github.com/bussedev/monorepo/issues"
+  },
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/services/pluggit/pluggit-web#readme",
+  "repository": {
+    "url": "git@github.com:bussedev/monorepo.git"
   }
 }
