--- a/tools/create-package/package.json
+++ b/tools/create-package/package.json
@@ -36,5 +36,12 @@
     "node": ">=16.13.0",
     "pnpm": ">=6.19.0"
   },
-  "private": true
+  "private": true,
+  "bugs": {
+    "url": "https://github.com/bussedev/monorepo/issues"
+  },
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/tools/create-package#readme",
+  "repository": {
+    "url": "git@github.com:bussedev/monorepo.git"
+  }
 }
