--- a/tools/tsconfig/package.json
+++ b/tools/tsconfig/package.json
@@ -14,5 +14,12 @@
     "test": "true",
     "clean": "rimraf dist *.tsbuildinfo"
   },
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/bussedev/monorepo/issues"
+  },
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/tools/tsconfig#readme",
+  "repository": {
+    "url": "git@github.com:bussedev/monorepo.git"
+  }
 }
