--- a/.meta-updater/package.json
+++ b/.meta-updater/package.json
@@ -29,5 +29,12 @@
     "node": ">=16.13.0",
     "pnpm": ">=6.19.0"
   },
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "bugs": {
+    "url": "https://github.com/bussedev/monorepo/issues"
+  },
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/.meta-updater#readme",
+  "repository": {
+    "url": "git@github.com:bussedev/monorepo.git"
+  }
 }
