--- a/libs/edged/adapters/s3-adapter/package.json
+++ b/libs/edged/adapters/s3-adapter/package.json
@@ -25,7 +25,6 @@
     "pnpm": ">=6.19.0"
   },
   "repository": {
-    "type": "git",
     "url": "git@github.com:bussedev/monorepo.git"
   },
   "keywords": [
@@ -39,7 +38,7 @@
   "bugs": {
     "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/adapters/s3-adapter",
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/adapters/s3-adapter#readme",
   "files": [
     "dist"
   ]
