--- a/libs/edged/common/package.json
+++ b/libs/edged/common/package.json
@@ -29,7 +29,6 @@
     "pnpm": ">=6.19.0"
   },
   "repository": {
-    "type": "git",
     "url": "git@github.com:bussedev/monorepo.git"
   },
   "keywords": [
@@ -43,7 +42,7 @@
   "bugs": {
     "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/common",
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/common#readme",
   "files": [
     "dist"
   ]
