--- a/libs/edged/core/package.json
+++ b/libs/edged/core/package.json
@@ -26,7 +26,6 @@
     "pnpm": ">=6.19.0"
   },
   "repository": {
-    "type": "git",
     "url": "git@github.com:bussedev/monorepo.git"
   },
   "keywords": [
@@ -40,7 +39,7 @@
   "bugs": {
     "url": "https://github.com/bussedev/monorepo/issues"
   },
-  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/core",
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/edged/core#readme",
   "files": [
     "dist"
   ]
