--- a/libs/homebridge-plugin-pluggit/package.json
+++ b/libs/homebridge-plugin-pluggit/package.json
@@ -54,5 +54,12 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/bussedev/monorepo/issues"
+  },
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/homebridge-plugin-pluggit#readme",
+  "repository": {
+    "url": "git@github.com:bussedev/monorepo.git"
+  }
 }
