--- a/tools/eslint/package.json
+++ b/tools/eslint/package.json
@@ -21,5 +21,12 @@
   "devDependencies": {
     "@busse/jest-config": "workspace:*"
   },
-  "private": true
+  "private": true,
+  "bugs": {
+    "url": "https://github.com/bussedev/monorepo/issues"
+  },
+  "homepage": "https://github.com/bussedev/monorepo/tree/main/tools/eslint#readme",
+  "repository": {
+    "url": "git@github.com:bussedev/monorepo.git"
+  }
 }
