--- a/services/pluggit/pluggit-collector/chart/values.yaml
+++ b/services/pluggit/pluggit-collector/chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: hub.busse.dev/pluggit-collector
+  repository:ghcr.io/v2/bussedev/pluggit-collector
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ''
