--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "private": true,
   "devDependencies": {
-    "@busse/create-package": "1.0.0",
-    "@busse/eslint-config": "1.0.0",
-    "@busse/jest-config": "1.0.0",
-    "@busse/tsconfig": "1.0.1",
+    "@busse/create-package": "workspace:*",
+    "@busse/eslint-config": "workspace:*",
+    "@busse/jest-config": "workspace:*",
+    "@busse/tsconfig": "workspace:*",
     "@changesets/cli": "^2.24.3",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
