docs(changeset): Upgrade deps

--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
   },
   "private": true,
   "devDependencies": {
-    "@busse/create-package": "workspace:*",
-    "@busse/eslint-config": "workspace:*",
-    "@busse/jest-config": "workspace:*",
-    "@busse/tsconfig": "workspace:*",
-    "@changesets/cli": "^2.24.3",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
+    "@busse/create-package": "workspace:1.0.1",
+    "@busse/eslint-config": "workspace:1.0.1",
+    "@busse/jest-config": "workspace:1.0.1",
+    "@busse/tsconfig": "workspace:1.0.2",
+    "@changesets/cli": "^2.24.4",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@pnpm/meta-updater": "^0.0.6",
-    "@types/node": "^16.11.44",
+    "@types/node": "^16.11.56",
     "husky": "^8.0.1",
-    "jest": "^29.0.1",
+    "jest": "^29.0.2",
     "lint-staged": "^13.0.3",
-    "pkg": "^5.7.0",
+    "pkg": "^5.8.0",
     "rimraf": "^3.0.2",
     "run-script-webpack-plugin": "^0.1.1",
     "source-map-support": "^0.5.21",
@@ -57,25 +57,25 @@
     ]
   },
   "dependencies": {
-    "@busse/homebridge-pluggit": "1.2.2",
-    "@nestjs/apollo": "^10.0.16",
+    "@busse/homebridge-pluggit": "workspace:*",
+    "@nestjs/apollo": "^10.1.0",
     "@nestjs/axios": "^0.0.8",
     "@nestjs/common": "^8.4.7",
-    "@nestjs/config": "^2.1.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.4.7",
-    "@nestjs/graphql": "^10.0.16",
+    "@nestjs/graphql": "^10.1.0",
     "@nestjs/microservices": "^8.4.7",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.7",
-    "@nestjs/schedule": "^2.0.1",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/swagger": "^5.2.1",
-    "@nestjs/terminus": "^8.1.0",
+    "@nestjs/terminus": "^8.1.1",
     "@nestjs/testing": "^8.4.7",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -84,7 +84,7 @@
     "react": "*",
     "react-dom": "*",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.5",
+    "rxjs": "^7.5.6",
     "tsc-watch": "^5.0.3"
   }
 }
