--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "private": true,
   "devDependencies": {
-    "@busse/create-package": "workspace:1.0.1",
-    "@busse/eslint-config": "workspace:1.0.1",
-    "@busse/jest-config": "workspace:1.0.1",
-    "@busse/tsconfig": "workspace:1.0.2",
+    "@busse/create-package": "workspace:*",
+    "@busse/eslint-config": "workspace:*",
+    "@busse/jest-config": "workspace:*",
+    "@busse/tsconfig": "workspace:*",
     "@changesets/cli": "^2.24.4",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
