--- a/libs/pluggit/package.json
+++ b/libs/pluggit/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --cache ./src --ignore-path ../../.eslintignore"
   },
   "dependencies": {
-    "modbus-serial": "^8.0.5",
+    "jsmodbus": "^4.0.6",
     "p-limit": "^3.1.0",
     "tslib": "^2.4.0"
   },
