--- a/libs/homebridge-plugin-pluggit/package.json
+++ b/libs/homebridge-plugin-pluggit/package.json
@@ -49,7 +49,8 @@
   },
   "engines": {
     "node": ">=14.17.0",
-    "pnpm": ">=6.19.0"
+    "pnpm": ">=6.19.0",
+    "homebridge": ">=1.0.0"
   },
   "files": [
     "dist",
