--- a/libs/pluggit/nest-pluggit-client/tsconfig.json
+++ b/libs/pluggit/nest-pluggit-client/tsconfig.json
@@ -13,10 +13,10 @@
   ],
   "references": [
     {
-      "path": "../pluggit/tsconfig.json"
+      "path": "../../testing/tsconfig.json"
     },
     {
-      "path": "../testing/tsconfig.json"
+      "path": "../pluggit-client/tsconfig.json"
     }
   ]
 }
