--- a/libs/pluggit/pluggit-client/tsconfig.build.json
+++ b/libs/pluggit/pluggit-client/tsconfig.build.json
@@ -11,7 +11,7 @@
   ],
   "references": [
     {
-      "path": "../testing/tsconfig.build.json"
+      "path": "../../testing/tsconfig.build.json"
     }
   ]
 }
