--- a/libs/pluggit/pluggit-client/tsconfig.json
+++ b/libs/pluggit/pluggit-client/tsconfig.json
@@ -13,7 +13,7 @@
   ],
   "references": [
     {
-      "path": "../testing/tsconfig.json"
+      "path": "../../testing/tsconfig.json"
     }
   ]
 }
