--- a/libs/pluggit/nest-pluggit-client/tsconfig.build.json
+++ b/libs/pluggit/nest-pluggit-client/tsconfig.build.json
@@ -11,10 +11,10 @@
   ],
   "references": [
     {
-      "path": "../pluggit/tsconfig.build.json"
+      "path": "../../testing/tsconfig.build.json"
     },
     {
-      "path": "../testing/tsconfig.build.json"
+      "path": "../pluggit-client/tsconfig.build.json"
     }
   ]
 }
