--- a/libs/common/package.json
+++ b/libs/common/package.json
@@ -56,5 +56,6 @@
   "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/common#readme",
   "repository": {
     "url": "git@github.com:bussedev/monorepo.git"
-  }
+  },
+  "author": "Philipp Busse"
 }
