--- a/libs/net-scan-cli/package.json
+++ b/libs/net-scan-cli/package.json
@@ -40,5 +40,6 @@
   "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/net-scan-cli#readme",
   "repository": {
     "url": "git@github.com:bussedev/monorepo.git"
-  }
+  },
+  "author": "Philipp Busse"
 }
