--- a/libs/pluggit/homebridge-plugin-pluggit/package.json
+++ b/libs/pluggit/homebridge-plugin-pluggit/package.json
@@ -62,5 +62,6 @@
   "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/pluggit/homebridge-plugin-pluggit#readme",
   "repository": {
     "url": "git@github.com:bussedev/monorepo.git"
-  }
+  },
+  "author": "Philipp Busse"
 }
