--- a/libs/pluggit/nest-pluggit-client/package.json
+++ b/libs/pluggit/nest-pluggit-client/package.json
@@ -48,5 +48,6 @@
   "homepage": "https://github.com/bussedev/monorepo/tree/main/libs/pluggit/nest-pluggit-client#readme",
   "repository": {
     "url": "git@github.com:bussedev/monorepo.git"
-  }
+  },
+  "author": "Philipp Busse"
 }
