--- a/services/pluggit/pluggit-collector/package.json
+++ b/services/pluggit/pluggit-collector/package.json
@@ -68,5 +68,6 @@
   "homepage": "https://github.com/bussedev/monorepo/tree/main/services/pluggit/pluggit-collector#readme",
   "repository": {
     "url": "git@github.com:bussedev/monorepo.git"
-  }
+  },
+  "author": "Philipp Busse"
 }
