--- a/tools/create-package/package.json
+++ b/tools/create-package/package.json
@@ -43,5 +43,6 @@
   "homepage": "https://github.com/bussedev/monorepo/tree/main/tools/create-package#readme",
   "repository": {
     "url": "git@github.com:bussedev/monorepo.git"
-  }
+  },
+  "author": "Philipp Busse"
 }
