chore: do not break workspace protocol versions

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:changed": "jest --changed-since $(git merge-base HEAD origin/main)",
     "l": "pnpm ls -r --depth -1 --parseable",
     "reset": "pnpm clean && rm -fr node_modules/ && pnpm -r exec rm -fr node_modules && pnpm i && pnpm build",
-    "dep:fix": "syncpack fix-mismatches",
+    "dep:fix": "syncpack fix-mismatches --filter '^(?!.*@busse|@edged).*$'",
     "release": "pnpm build && pnpm -r publish --access=public"
   },
   "private": true,
