--- a/libs/edged/core/tsconfig.json
+++ b/libs/edged/core/tsconfig.json
@@ -4,7 +4,15 @@
     "outDir": "./dist",
     "rootDir": "src"
   },
-  "include": ["src/**/*", "__tests__/**/*", "example/**/*", "__mocks__/**/*"],
+  "include": [
+    "src/**/*",
+    "__tests__/**/*",
+    "example/**/*",
+    "__mocks__/**/*"
+  ],
   "references": [],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
