--- a/libs/edged/express-sharp/tsconfig.build.json
+++ b/libs/edged/express-sharp/tsconfig.build.json
@@ -1,8 +1,15 @@
 {
   "extends": "./tsconfig.json",
   "exclude": [
+    "**/__mocks__",
+    "**/__test__",
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "dist",
     "node_modules",
-    "dist"
+    "test"
   ],
   "references": [
     {
