--- a/libs/pluggit/nest-pluggit-client/tsconfig.json
+++ b/libs/pluggit/nest-pluggit-client/tsconfig.json
@@ -8,8 +8,8 @@
     "src/**/*"
   ],
   "exclude": [
-    "node_modules",
-    "dist"
+    "dist",
+    "node_modules"
   ],
   "references": [
     {
