--- a/libs/unleash/nestjs-unleash/tsconfig.build.json
+++ b/libs/unleash/nestjs-unleash/tsconfig.build.json
@@ -1,9 +1,16 @@
 {
   "extends": "./tsconfig.json",
   "exclude": [
-    "node_modules",
+    "**/__mocks__",
+    "**/__test__",
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.test.ts",
+    "**/*.test.tsx",
     "dist",
-    "e2e"
+    "e2e",
+    "node_modules",
+    "test"
   ],
   "references": []
 }
