--- a/services/pluggit/pluggit-collector/tsconfig.build.json
+++ b/services/pluggit/pluggit-collector/tsconfig.build.json
@@ -2,12 +2,16 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {},
   "exclude": [
-    "node_modules",
-    "test",
-    "dist",
-    "**/*.spec.ts",
+    "**/__mocks__",
+    "**/__snapshots__",
     "**/__test__",
-    "**/__snapshots__"
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "dist",
+    "node_modules",
+    "test"
   ],
   "references": [
     {
