--- a/services/pluggit/pluggit-web/tsconfig.json
+++ b/services/pluggit/pluggit-web/tsconfig.json
@@ -9,8 +9,8 @@
     "src/**/*"
   ],
   "exclude": [
-    "node_modules",
-    "dist"
+    "dist",
+    "node_modules"
   ],
   "references": [
     {
