--- a/tools/create-package/tsconfig.json
+++ b/tools/create-package/tsconfig.json
@@ -10,8 +10,8 @@
     "src/**/*"
   ],
   "exclude": [
-    "node_modules",
-    "dist"
+    "dist",
+    "node_modules"
   ],
   "references": [
     {
